<?xml version="1.0"?>
<package format="2">
	<name>geo_mapping</name>
	<version>0.0.0</version>
	<description>The geo_mapping package</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<!-- Example:  -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="james@todo.todo">james</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>


	<!-- Url tags are optional, but multiple are allowed, one per tag -->
	<!-- Optional attribute type can be: website, bugtracker, or repository -->
	<!-- Example: -->
	<!-- <url type="website">http://wiki.ros.org/geo_mapping</url> -->


	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>rospy</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>tf2_ros</build_depend>

	<build_export_depend>rospy</build_export_depend>
	<build_export_depend>sensor_msgs</build_export_depend>
	<build_export_depend>geometry_msgs</build_export_depend>
	<build_export_depend>nav_msgs</build_export_depend>
	<build_export_depend>tf2_ros</build_export_depend>

	<exec_depend>rospy</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>nav_msgs</exec_depend>
	<exec_depend>tf2_ros</exec_depend>

</package>
